Add token validation and users page

--- a/ecommerce-front/src/app/commons/components/header/header.component.html
+++ b/ecommerce-front/src/app/commons/components/header/header.component.html
@@ -5,8 +5,8 @@
     </button>
 
     <div class="d-flex align-items-center gap-3">
-      <img src="assets/images/logo.png" alt="Logo" height="28" />
-      <h5 class="m-0 fw-bold">E-Commerce</h5>
+      <img src="/assets/images/logo.png" alt="Logo" height="40" />
+      <h5 class="m-0 fw-bold">E-Commerce GT</h5>
     </div>
   </div>
 
@@ -14,11 +14,11 @@
     <button type="button" class="btn btn-primary" ngbDropdownToggle>
       <div class="user-info text-white align-items-center d-flex gap-2 pe-2">
         <div class="d-none d-md-flex flex-column text-end">
-          <p class="user-name m-0 fw-semibold fs-14">{{ userName }}</p>
+          <p class="user-name m-0 fw-semibold fs-14">{{ fullName }}</p>
           <p class="user-role text-light m-0 fs-12">{{ userRole }}</p>
         </div>
         <div class="avatar fw-semibold h6 m-0">
-          {{ userName[0]  }}
+          {{ fullName[0]  }}
         </div>
         <app-material-icon class="d-none d-md-block">expand_more</app-material-icon>
       </div>
