--- a/ecommerce-front/src/app/features/moderator/pages/products/product-m-detail/product-m-detail.component.html
+++ b/ecommerce-front/src/app/features/moderator/pages/products/product-m-detail/product-m-detail.component.html
@@ -48,8 +48,9 @@
         }
       </div>
       <div class="d-flex flex-row gap-2 text-end">
-        <button class="btn btn-outline-primary mt-5" (click)="accept()">Aceptar</button>
-        <button class="btn btn-outline-danger mt-5" (click)="reject()">Rechazar</button>
+        <button class="btn btn-outline-success mt-5" (click)="accept()">Aceptar</button>
+        <button class="btn btn-outline-warning mt-5" (click)="reject()">Rechazar</button>
+        <button class="btn btn-outline-danger mt-5" (click)="openSanctionModal()">Sancionar</button>
       </div>
     </div>
   </div>
